--- a/packages/spindle-ui/src/SnackBar/SnackBar.css
+++ b/packages/spindle-ui/src/SnackBar/SnackBar.css
@@ -90,9 +90,7 @@
 }
 
 .spui-SnackBar--slide {
-  transition:
-    transform 0.3s ease,
-    opacity 0.3s ease;
+  transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
 .spui-SnackBar--hidden {
@@ -101,9 +99,7 @@
 
 .spui-SnackBar-slide--in {
   opacity: 1;
-  transition:
-    transform 0.5s ease,
-    opacity 0.5s ease;
+  transition: transform 0.5s ease, opacity 0.5s ease;
 }
 
 .spui-SnackBar-slide--in.spui-SnackBar--top {
