--- a/packages/spindle-ui/src/ButtonGroup/ButtonGroup.css
+++ b/packages/spindle-ui/src/ButtonGroup/ButtonGroup.css
@@ -47,10 +47,7 @@
   margin-top: 20px;
 }
 
-:is(
-    .spui-ButtonGroup--medium,
-    .spui-ButtonGroup--small
-  ).spui-ButtonGroup--column
+:is(.spui-ButtonGroup--medium, .spui-ButtonGroup--small).spui-ButtonGroup--column
   > .spui-SubtleButton:not(:first-child) {
   margin-top: 14px;
 }
