--- a/packages/spindle-ui/src/Modal/SemiModal.css
+++ b/packages/spindle-ui/src/Modal/SemiModal.css
@@ -32,12 +32,8 @@
 /* stylelint-disable plugin/selector-bem-pattern */
 /* NOTE: set no animations to the dialog-polyfill browsers for stability */
 .spui-SemiModal[data-type='popup'][open]:not(.spui-SemiModal--closing),
-.spui-SemiModal[data-type='popup'][open]:not(
-    .spui-SemiModal--closing
-  ).spui-SemiModal::backdrop,
-.spui-SemiModal[data-type='sheet'][open]:not(
-    .spui-SemiModal--closing
-  ).spui-SemiModal::backdrop {
+.spui-SemiModal[data-type='popup'][open]:not(.spui-SemiModal--closing).spui-SemiModal::backdrop,
+.spui-SemiModal[data-type='sheet'][open]:not(.spui-SemiModal--closing).spui-SemiModal::backdrop {
   animation: 350ms cubic-bezier(0, 0, 0, 1) spui-SemiModal-fade-in;
 }
 
@@ -57,15 +53,11 @@
 
 @media (prefers-reduced-motion: reduce) {
   .spui-SemiModal[data-type='popup'][open]:not(.spui-SemiModal--closing),
-  .spui-SemiModal[data-type='popup'][open]:not(
-      .spui-SemiModal--closing
-    ).spui-SemiModal::backdrop,
+  .spui-SemiModal[data-type='popup'][open]:not(.spui-SemiModal--closing).spui-SemiModal::backdrop,
   .spui-SemiModal[data-type='popup'].spui-SemiModal--closing,
   .spui-SemiModal--closing.spui-SemiModal[data-type='popup']::backdrop,
   .spui-SemiModal[data-type='sheet'][open]:not(.spui-SemiModal--closing),
-  .spui-SemiModal[data-type='sheet'][open]:not(
-      .spui-SemiModal--closing
-    ).spui-SemiModal::backdrop,
+  .spui-SemiModal[data-type='sheet'][open]:not(.spui-SemiModal--closing).spui-SemiModal::backdrop,
   .spui-SemiModal[data-type='sheet'].spui-SemiModal--closing,
   .spui-SemiModal--closing.spui-SemiModal[data-type='sheet']::backdrop {
     /* Do not remove this animation to detect animationend in JavaScript */
@@ -109,25 +101,14 @@ html.spui-SemiModal--open {
  * - Safari does not support radius outline
 */
 .spui-SemiModal
-  :is(
-    .spui-Button,
-    .spui-LinkButton,
-    .spui-IconButton,
-    .spui-SubtleButton
-  ):focus {
-  box-shadow:
-    0 0 0 1px var(--color-surface-secondary),
+  :is(.spui-Button, .spui-LinkButton, .spui-IconButton, .spui-SubtleButton):focus {
+  box-shadow: 0 0 0 1px var(--color-surface-secondary),
     0 0 0 2px var(--color-focus-clarity);
   outline: none;
 }
 
 .spui-SemiModal
-  :is(
-    .spui-Button,
-    .spui-LinkButton,
-    .spui-IconButton,
-    .spui-SubtleButton
-  ):focus:not(:focus-visible) {
+  :is(.spui-Button, .spui-LinkButton, .spui-IconButton, .spui-SubtleButton):focus:not(:focus-visible) {
   box-shadow: none;
 }
 
