--- a/packages/spindle-ui/src/Toast/Toast.css
+++ b/packages/spindle-ui/src/Toast/Toast.css
@@ -60,9 +60,7 @@
 }
 
 .spui-Toast--slide {
-  transition:
-    transform 0.3s ease,
-    opacity 0.3s ease;
+  transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
 .spui-Toast--hidden {
@@ -71,9 +69,7 @@
 
 .spui-Toast-slide--in {
   opacity: 1;
-  transition:
-    transform 0.5s ease,
-    opacity 0.5s ease;
+  transition: transform 0.5s ease, opacity 0.5s ease;
 }
 
 .spui-Toast-slide--in.spui-Toast--top {
