fix(spindle-ui): 選択肢が長い時にラジオボタンが潰れて見える

--- a/packages/spindle-ui/src/Form/Radio.css
+++ b/packages/spindle-ui/src/Form/Radio.css
@@ -28,6 +28,7 @@
   box-sizing: border-box;
   color: transparent;
   display: inline-flex;
+  flex-shrink: 0;
   font-size: 0.875em;
   height: 20px;
   justify-content: center;
