--- a/packages/spindle-ui/src/Form/Checkbox.css
+++ b/packages/spindle-ui/src/Form/Checkbox.css
@@ -1,6 +1,10 @@
 /*
  * Checkbox
 */
+:root {
+  --Checkbox-backGroundColor: var(--color-surface-primary);
+}
+
 .spui-Checkbox-label {
   align-items: center;
   border-radius: 2px;
@@ -10,6 +14,19 @@
   font-weight: bold;
   line-height: 1;
   position: relative;
+}
+
+/* Outline with text */
+.spui-Checkbox-label:focus-within:has(.spui-Checkbox-text:not(:empty)) {
+  box-shadow:
+    0 0 0 2px var(--Checkbox-backGroundColor),
+    0 0 0 4px var(--color-focus-clarity);
+}
+
+.spui-Checkbox-label:focus-within:has(
+    .spui-Checkbox-input:not(:focus-visible)
+  ) {
+  box-shadow: none;
 }
 
 .spui-Checkbox-input {
@@ -56,12 +73,18 @@
   width: 22px;
 }
 
-/* box-shadow is used to apply border-radius as outline */
-.spui-Checkbox-input:focus ~ .spui-Checkbox-outline {
+/* Outline without text */
+.spui-Checkbox-label:has(:not(.spui-Checkbox-text))
+  .spui-Checkbox-input:focus-visible
+  ~ .spui-Checkbox-outline {
   box-shadow: 0 0 0 2px var(--color-focus-clarity);
 }
 
-.spui-Checkbox-input:focus:not(:focus-visible) ~ .spui-Checkbox-outline {
+.spui-Checkbox-label:has(.spui-Checkbox-text):has(
+    :not(.spui-Checkbox-text:empty)
+  )
+  .spui-Checkbox-input:focus-visible
+  ~ .spui-Checkbox-outline {
   box-shadow: none;
 }
 
