--- a/packages/spindle-ui/src/Form/Radio.css
+++ b/packages/spindle-ui/src/Form/Radio.css
@@ -1,6 +1,10 @@
 /*
  * Radio
 */
+:root {
+  --Radio-backGroundColor: var(--color-surface-primary);
+}
+
 .spui-Radio-label {
   align-items: center;
   border-radius: 2px;
@@ -10,6 +14,17 @@
   font-weight: bold;
   line-height: 1;
   position: relative;
+}
+
+/* Outline with text */
+.spui-Radio-label:focus-within:has(.spui-Radio-text:not(:empty)) {
+  box-shadow:
+    0 0 0 2px var(--Radio-backGroundColor),
+    0 0 0 4px var(--color-focus-clarity);
+}
+
+.spui-Radio-label:focus-within:has(.spui-Radio-input:not(:focus-visible)) {
+  box-shadow: none;
 }
 
 .spui-Radio-input {
@@ -58,12 +73,16 @@
   width: 24px;
 }
 
-/* box-shadow is used to apply border-radius as outline */
-.spui-Radio-input:focus ~ .spui-Radio-outline {
+/* Outline without text */
+.spui-Radio-label:has(:not(.spui-Radio-text))
+  .spui-Radio-input:focus-visible
+  ~ .spui-Radio-outline {
   box-shadow: 0 0 0 2px var(--color-focus-clarity);
 }
 
-.spui-Radio-input:focus:not(:focus-visible) ~ .spui-Radio-outline {
+.spui-Radio-label:has(.spui-Radio-text):has(:not(.spui-Radio-text:empty))
+  .spui-Radio-input:focus-visible
+  ~ .spui-Radio-outline {
   box-shadow: none;
 }
 
