fix(spindle-ui): set DropDown background color

--- a/packages/spindle-ui/src/Form/DropDown.css
+++ b/packages/spindle-ui/src/Form/DropDown.css
@@ -23,6 +23,7 @@
 
 .spui-DropDown-visual {
   align-items: center;
+  background-color: var(--color-surface-primary);
   border: solid 1px var(--color-border-medium-emphasis);
   border-radius: 8px;
   box-sizing: border-box;
