--- a/packages/spindle-ui/src/Form/TextArea.css
+++ b/packages/spindle-ui/src/Form/TextArea.css
@@ -37,7 +37,8 @@
   box-shadow: none;
 }
 
-.spui-TextArea.is-error {
+.spui-TextArea.is-error,
+.spui-TextArea:user-invalid {
   background-color: var(--color-surface-caution-light);
   border-color: var(--color-border-caution);
 }
