--- a/packages/spindle-ui/src/ButtonSwitch/ButtonSwitch.css
+++ b/packages/spindle-ui/src/ButtonSwitch/ButtonSwitch.css
@@ -5,24 +5,26 @@
 }
 
 .spui-ButtonSwitch-button {
+  align-items: center;
   background-color: var(--color-surface-tertiary);
   border: none;
   border-radius: 0;
   color: var(--color-text-medium-emphasis);
   cursor: pointer;
-  display: inline-block;
-  font-size: 14px;
-  font-weight: 500;
-  height: 40px;
-  line-height: 40px;
-  padding: 0 16px;
+  display: inline-flex;
+  flex: 1;
+  font-size: 13px;
+  gap: 2.5px;
+  justify-content: center;
+  line-height: 1.3;
+  padding: 9.5px 19px;
   position: relative;
   text-align: center;
   text-decoration: none;
   transition:
-    background-color 0.3s,
-    border-color 0.3s,
-    color 0.3s;
+    font-weight 0.35s ease,
+    color 0.35s ease,
+    background-color 0.15s ease;
   white-space: nowrap;
 }
 
@@ -33,6 +35,7 @@
 .spui-ButtonSwitch-button[aria-pressed='true'] {
   background-color: var(--color-surface-accent-primary);
   color: var(--color-text-high-emphasis-inverse);
+  font-weight: bold;
 }
 
 .spui-ButtonSwitch-button[aria-pressed='true']:hover {
