--- a/packages/spindle-ui/src/ButtonSwitch/ButtonSwitch.css
+++ b/packages/spindle-ui/src/ButtonSwitch/ButtonSwitch.css
@@ -1,5 +1,5 @@
 .spui-ButtonSwitch {
-  align-items: center;
+  align-items: stretch;
   display: flex;
   flex-direction: row;
 }
@@ -14,7 +14,7 @@
   display: inline-flex;
   flex: 1;
   font-size: 13px;
-  gap: 2.5px;
+  gap: 4px;
   justify-content: center;
   line-height: 1.3;
   padding: 9.5px 19px;
@@ -34,12 +34,24 @@
 
 .spui-ButtonSwitch-button[aria-pressed='true'] {
   background-color: var(--color-surface-accent-primary);
-  color: var(--color-text-high-emphasis-inverse);
   font-weight: bold;
+}
+
+.spui-ButtonSwitch-button[aria-pressed='true'] .spui-ButtonSwitch-checked-icon {
+  color: var(--color-object-high-emphasis-inverse);
+}
+
+.spui-ButtonSwitch-button[aria-pressed='true'] .spui-ButtonSwitch-label {
+  color: var(--color-text-high-emphasis-inverse);
 }
 
 .spui-ButtonSwitch-button[aria-pressed='true']:hover {
   background-color: var(--primary-green-100);
+}
+
+.spui-ButtonSwitch-button:focus-visible {
+  outline: 2px solid var(--color-focus-clarity);
+  outline-offset: 2px;
 }
 
 .spui-ButtonSwitch-button:first-child {
@@ -58,4 +70,12 @@
   position: absolute;
   top: 0;
   width: 1px;
+}
+
+.spui-ButtonSwitch-checked-icon {
+  flex-shrink: 0;
+}
+
+.spui-ButtonSwitch-label {
+  text-wrap: wrap;
 }
