--- a/packages/spindle-ui/src/ButtonSwitch/ButtonSwitch.css
+++ b/packages/spindle-ui/src/ButtonSwitch/ButtonSwitch.css
@@ -10,14 +10,13 @@
   border: none;
   border-radius: 0;
   color: var(--color-text-medium-emphasis);
-  cursor: pointer;
   display: inline-flex;
   flex: 1;
-  font-size: 13px;
+  font-size: 0.8125em;
   gap: 4px;
   justify-content: center;
   line-height: 1.3;
-  padding: 9.5px 19px;
+  padding: 8px 4px;
   position: relative;
   text-align: center;
   text-decoration: none;
@@ -29,7 +28,7 @@
 }
 
 .spui-ButtonSwitch-button:hover {
-  background-color: var(--gray-20-alpha);
+  background-color: var(--color-hover-neutral-button);
 }
 
 .spui-ButtonSwitch-button[aria-pressed='true'] {
@@ -46,7 +45,7 @@
 }
 
 .spui-ButtonSwitch-button[aria-pressed='true']:hover {
-  background-color: var(--primary-green-100);
+  background-color: var(--color-hover-contained-button);
 }
 
 .spui-ButtonSwitch-button:focus-visible {
@@ -77,5 +76,6 @@
 }
 
 .spui-ButtonSwitch-label {
-  text-wrap: wrap;
+  margin: 0;
+  white-space: break-spaces;
 }
