feat(spindle-ui): improve button switch story

--- a/packages/spindle-ui/src/ButtonSwitch/ButtonSwitch.css
+++ b/packages/spindle-ui/src/ButtonSwitch/ButtonSwitch.css
@@ -54,11 +54,13 @@
 }
 
 .spui-ButtonSwitch-button:first-child {
-  border-radius: 6px 0 0 6px;
+  border-bottom-left-radius: 6px;
+  border-top-left-radius: 6px;
 }
 
 .spui-ButtonSwitch-button:last-child {
-  border-radius: 0 6px 6px 0;
+  border-bottom-right-radius: 6px;
+  border-top-right-radius: 6px;
 }
 
 .spui-ButtonSwitch-button + .spui-ButtonSwitch-button::after {
