feat(spindle-ui): add rating component

--- a/packages/spindle-ui/src/index.css
+++ b/packages/spindle-ui/src/index.css
@@ -19,6 +19,7 @@
 @import './List/index.css';
 @import './DropdownMenu/DropdownMenu.css';
 @import './Pagination/Pagination.css';
+@import './Rating/Rating.css';
 @import './InlineNotification/InlineNotification.css';
 @import './SegmentedControl/SegmentedControl.css';
 @import './NavigationTab/index.css';
