--- a/packages/spindle-ui/src/index.css
+++ b/packages/spindle-ui/src/index.css
@@ -11,6 +11,7 @@
 @import './LinkButton/LinkButton.css';
 @import './Modal/index.css';
 @import './SubtleButton/SubtleButton.css';
+@import './Table/Table.css';
 @import './TextButton/TextButton.css';
 @import './TextLink/TextLink.css';
 @import './Toast/Toast.css';
