fix(spindle-ui): containerからframeに変更

--- a/packages/spindle-ui/src/Table/Table.css
+++ b/packages/spindle-ui/src/Table/Table.css
@@ -44,12 +44,12 @@
 /*
  * Table container
  */
-.spui-Table-container {
+.spui-Table-frame {
   position: relative;
   width: 100%;
 }
 
-.spui-Table-container--scrollable {
+.spui-Table-frame--scrollable {
   overflow-x: auto;
 }
 
