--- a/packages/spindle-ui/src/Table/Table.css
+++ b/packages/spindle-ui/src/Table/Table.css
@@ -284,6 +284,7 @@
   font-size: var(--Table-head-fontSize);
   font-weight: var(--Table-head-fontWeight);
   line-height: var(--Table-head-lineHeight);
+  overflow-wrap: break-word;
   padding: var(--Table-head-padding);
   text-align: left;
   vertical-align: middle;
@@ -310,6 +311,7 @@
   font-size: var(--Table-cell-fontSize);
   font-weight: var(--Table-cell-fontWeight);
   line-height: var(--Table-cell-lineHeight);
+  overflow-wrap: break-word;
   padding: var(--Table-cell-padding);
   text-align: left;
   vertical-align: middle;
