--- a/packages/spindle-ui/src/Button/Button.css
+++ b/packages/spindle-ui/src/Button/Button.css
@@ -8,28 +8,40 @@
 
   --Button--contained-backgroundColor: var(--color-surface-accent-primary);
   --Button--contained-color: var(--color-text-high-emphasis-inverse);
-  --Button--contained-onActive-backgroundColor: var(--primary-green-100);
-  --Button--contained-onHover-backgroundColor: var(--primary-green-100);
+  --Button--contained-onActive-backgroundColor: var(
+    --color-active-contained-button
+  );
+  --Button--contained-onHover-backgroundColor: var(
+    --color-hover-contained-button
+  );
 
   --Button--outlined-borderColor: var(--color-border-accent-primary);
   --Button--outlined-color: var(--color-text-accent-primary);
-  --Button--outlined-onActive-backgroundColor: var(--primary-green-5);
-  --Button--outlined-onHover-backgroundColor: var(--primary-green-5);
+  --Button--outlined-onActive-backgroundColor: var(
+    --color-active-outlined-button
+  );
+  --Button--outlined-onHover-backgroundColor: var(
+    --color-hover-outlined-button
+  );
 
   --Button--lighted-backgroundColor: var(--color-surface-accent-primary-light);
   --Button--lighted-color: var(--color-text-accent-primary);
-  --Button--lighted-onActive-backgroundColor: var(--primary-green-10);
-  --Button--lighted-onHover-backgroundColor: var(--primary-green-10);
+  --Button--lighted-onActive-backgroundColor: var(
+    --color-active-lighted-button
+  );
+  --Button--lighted-onHover-backgroundColor: var(--color-hover-lighted-button);
 
   --Button--neutral-backgroundColor: var(--color-surface-tertiary);
   --Button--neutral-color: var(--color-text-medium-emphasis);
-  --Button--neutral-onActive-backgroundColor: var(--gray-20-alpha);
-  --Button--neutral-onHover-backgroundColor: var(--gray-20-alpha);
+  --Button--neutral-onActive-backgroundColor: var(
+    --color-active-neutral-button
+  );
+  --Button--neutral-onHover-backgroundColor: var(--color-hover-neutral-button);
 
   --Button--danger-borderColor: var(--color-border-caution);
   --Button--danger-color: var(--color-text-caution);
-  --Button--danger-onActive-backgroundColor: var(--caution-red-5-alpha);
-  --Button--danger-onHover-backgroundColor: var(--caution-red-5-alpha);
+  --Button--danger-onActive-backgroundColor: var(--color-active-danger-button);
+  --Button--danger-onHover-backgroundColor: var(--color-hover-danger-button);
 }
 
 /*
