fix(spindle-ui): セルにbox-sizing border-boxを指定する

--- a/packages/spindle-ui/src/Table/Table.css
+++ b/packages/spindle-ui/src/Table/Table.css
@@ -300,6 +300,7 @@
  */
 .spui-Table-head {
   background-color: var(--Table-head-backgroundColor);
+  box-sizing: border-box;
   color: var(--Table-head-color);
   font-size: var(--Table-head-fontSize);
   font-weight: var(--Table-head-fontWeight);
@@ -327,6 +328,7 @@
  */
 .spui-Table-cell {
   background-color: var(--Table-cell-backgroundColor);
+  box-sizing: border-box;
   color: var(--Table-cell-color);
   font-size: var(--Table-cell-fontSize);
   font-weight: var(--Table-cell-fontWeight);
