fix(spindle-ui): スマホ幅の時にSemiModalコンテンツ領域がスクロールバー分寄っている

--- a/packages/spindle-ui/src/Modal/SemiModal.css
+++ b/packages/spindle-ui/src/Modal/SemiModal.css
@@ -279,7 +279,7 @@ html.spui-SemiModal--open {
   }
 
   .spui-SemiModal-frame {
-    padding: 0 20px 24px;
+    padding: 0 12px 24px 20px;
   }
 
   .spui-SemiModal-footer {
