--- a/packages/spindle-ui/src/Modal/AppealModal.css
+++ b/packages/spindle-ui/src/Modal/AppealModal.css
@@ -109,14 +109,12 @@ html.spui-AppealModal--open {
   display: grid;
   gap: 0;
   grid-auto-flow: row;
-  grid-template-areas:
+  grid-template:
     'Image'
     'Title'
     'Body'
     'ButtonGroup'
-    'CloseButton';
-  grid-template-columns: 1fr;
-  grid-template-rows: auto;
+    'CloseButton' / 1fr;
   padding: 0 0 24px;
   width: 100%;
 }
@@ -198,13 +196,11 @@ html.spui-AppealModal--open {
 
   .spui-AppealModal-frame {
     grid-auto-flow: row;
-    grid-template-areas:
+    grid-template:
       'Title CloseButton'
       'Body CloseButton'
       'Image Image'
-      'ButtonGroup ButtonGroup';
-    grid-template-columns: 1fr 72px;
-    grid-template-rows: auto;
+      'ButtonGroup ButtonGroup' / 1fr 72px;
     padding: 0 0 36px;
   }
 
