--- a/packages/spindle-ui/src/Form/InlineDropDown.css
+++ b/packages/spindle-ui/src/Form/InlineDropDown.css
@@ -11,6 +11,7 @@
    * Layout should be set to have appropriate width with longest option text.
    * Browsers automatically get the width from select element
   */
+  /* stylelint-disable-next-line declaration-property-value-no-unknown */
   appearance: listitem; /* To apply layout (font size, padding etc) to <select> in WebKit */
   box-sizing: border-box;
   font-size: 1em;
